## Makefile.am
##
## Process this file with automake to produce Makefile.in

asn_DATA = CAP-gsmSSF-gsmSCF-pkgs-contracts-acs.asn1 \
		CAP-gprsSSF-gsmSCF-pkgs-contracts-acs.asn1 \
		CAP-smsSSF-gsmSCF-pkgs-contracts-acs.asn1 \
		CAP-gsmSCF-gsmSRF-pkgs-contracts-acs.asn1 \
		CAP-gsmSSF-gsmSCF-ops-args.asn1 \
		CAP-gprsSSF-gsmSCF-ops-args.asn1 \
		CAP-SMS-ops-args.asn1 \
		CAP-gsmSCF-gsmSRF-ops-args.asn1 \
		CAP-object-identifiers.asn1 \
		CAP-classes.asn1 \
		CAP-datatypes.asn1 \
		CAP-operationcodes.asn1 \
		CAP-errorcodes.asn1 \
		CAP-errortypes.asn1 \
		CAP-GPRS-ReferenceNumber.asn1 \
		CAP-U-ABORT-Data.asn1 \
		CS1-DataTypes.asn1 \
		CS2-datatypes.asn1

